--- a/MyDockerProject/MyDockerProject/Views/Partials/Hero.cshtml
+++ b/MyDockerProject/MyDockerProject/Views/Partials/Hero.cshtml
@@ -34,8 +34,8 @@
                 <a href="@buttonLink" class="bg-white text-gray-900 px-10 py-3.5 text-sm font-light tracking-widest uppercase hover:bg-gray-100 transition-colors inline-block text-center">
                     @buttonText
                 </a>
-                <a href="/hotels" class="bg-transparent border border-white/30 text-white px-10 py-3.5 text-sm font-light tracking-widest uppercase hover:bg-white/10 transition-colors inline-block text-center">
-                    View All Hotels
+                <a href="/book" class="bg-transparent border border-white/30 text-white px-10 py-3.5 text-sm font-light tracking-widest uppercase hover:bg-white/10 transition-colors inline-block text-center">
+                    Book Now
                 </a>
             </div>
         </div>
