Add hotel and room display in booking flow + fix hero buttons
- Display selected hotel and room information in RoomSelector component
- Display selected hotel and room information in CalendarSelector component
- Make hero second button optional via ViewData
- Hide second button on hotels page (only show one 'Book Now' button)
- Update homepage hero: 'Explore Hotels' and 'Book Now' buttons
- Hotels page hero: single 'Book Now' button linking to /book

--- a/MyDockerProject/MyDockerProject/Views/hotelList.cshtml
+++ b/MyDockerProject/MyDockerProject/Views/hotelList.cshtml
@@ -24,7 +24,8 @@
     ViewData["HeroBackgroundColor"] = "bg-gray-900";
     ViewData["HeroTextColor"] = "text-white";
     ViewData["HeroButtonText"] = "Book Now";
-    ViewData["HeroButtonLink"] = "/hotels";
+    ViewData["HeroButtonLink"] = "/book";
+    ViewData["HeroShowSecondButton"] = false; // Hide second button on hotels page
 }
 
 @await Html.PartialAsync("Partials/Hero", (object)null)
