Add Home template from Windows version

--- a/MyDockerProject/MyDockerProject/Views/home.cshtml
+++ b/MyDockerProject/MyDockerProject/Views/home.cshtml
@@ -1,4 +1,7 @@
-﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Web.Common.PublishedModels.Home>
+﻿@{
+	Layout = "undefined.cshtml";
+}
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Web.Common.PublishedModels.Home>
 
 @{
     // Get layout from content property or default to Main
